# eckit

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yaml  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog.md  LICENSE  NOTICE  README  README.md  README.rst  TODO  VERSION.cmake  eckit-import.cmake.in  eckit.code-workspace  eckit.sublime-project  format-sources.sh  healpix.py  main.cc  project_summary.cmake  pyproject.toml  setup.py
contrib/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst  requirements.txt
docs/content/: concepts.rst  plugins.rst  reference.rst  string_tools.rst
python/: CMakeLists.txt  build_chain.sh  eckit-geo-share-download.py  example.py  pyproject.toml  setup.py
python/eckit/: README.rst  build_chain.sh  example.py  pyproject.toml  requirements-devel.txt  requirements.txt  setup.py
python/eckitlib/: buildconfig  post-build.sh  pre-compile.sh  setup.cfg
rust/: Cargo.toml
src/: CMakeLists.txt  cppcheck-suppress  eckit_config.h.in  eckit_version.h.in  eclib_config.h.in  eclib_version.h.in
src/_eckit/: _eckit.pyx  _eckit_geo.pyx  eckit.pxd  eckit_geo.pxd
src/apps/: CMakeLists.txt  dhcopy.cc  eckit-version.cc  eckit_read_config.cc  eckit_version.cc  syslog-server.cc
src/bug-ECKIT-175/: CMakeLists.txt  bug-ECKIT-175.cc
src/eckit/: CMakeLists.txt  Dispatcher.cc  Dispatcher.h  LibEcKit.cc  LibEcKit.h  Pipe.cc  Pipe.h  ProducerConsumer.cc  ProducerConsumer.h  Recycler.cc  Recycler.h  Statistics.cc  Statistics.h  __init__.py  deprecated.h  eckit.h  eckit_config.h.in  eckit_version.c.in  eckit_version.cc.in  eckit_version.h.in  machine.h
src/eclib/: AIOHandle.cc  AIOHandle.h  Application.cc  Application.h  Area.h  AutoAlarm.cc  AutoAlarm.h  AutoLock.h  AutoLocker.cc  AutoLocker.h  BTree (BigMac's conflicted copy 2012-06-07).cc  BTree.cc  BTree.h  BackTrace.cc  BackTrace.h  BadValue.h  BasePathName.h  BasePathNameT.cc  BasePathNameT.h  BigNum.cc  BigNum.h  BoolContent.cc  BoolContent.h  Buffer.cc  Buffer.h  BufferCache.cc  BufferCache.h  BufferedHandle.cc  BufferedHandle.h  Bytes.cc  Bytes.h  CMakeLists.txt  Cache.h  CallbackLogger.cc  CallbackLogger.h  ClassExtent.cc  ClassExtent.h  ClimateDate.cc  ClimateDate.h  ClusterDisks.cc  (+326 more)
src/experimental/: CMakeLists.txt
src/griditer/: CMakeLists.txt  example.cc  griditer.h.in  util.cc  util.h
src/grit/: CMakeLists.txt  Figure.cc  Figure.h  Iterator.cc  Iterator.h  Parametrisation.h  Projection.cc  Projection.h  Scanner.cc  Scanner.h  Transformation.cc  Transformation.h  exception.h  log.cc  log.h  scanner.cc  transformation.cc  transformation.h  types.cc  types.h  util.cc  util.h
src/sandbox/: CMakeLists.txt  arg.cc  cpp11_futures.cc  memsharedlimit.cc  message_queue.h  mpi_comm.cc  mpiobjsend.cc  mpmc.cc  multi_socket_client.cc  multi_socket_server.cc  net.cc  pipe.cc  pool.cc  server.py  shint.cc  shmem_ipc.cc  tcp_client.cc  tcp_client_json.cc  tcp_server.cc  tcp_server_forked.cc  tcp_server_threaded.cc  udp_client.cc  udp_server.cc
src/tests/: CMakeLists.txt  test_aiohandle.cc  test_cache.cc  test_log.cc  test_log_callback.cc  test_mutex.cc  test_resource.cc  test_string_tools.cc  test_tokenizer.cc
src/tools/: CMakeLists.txt  EckitCodecTool.cc  EckitCodecTool.h  dhcopy.cc  eckit-area-list.cc  eckit-codec-compress.cc  eckit-codec-list.cc  eckit-codec-to-sparse-matrix.cc  eckit-fraction.cc  eckit-gaussian-latitudes.cc  eckit-geo-area-list.cc  eckit-geo-gaussian-latitudes.cc  eckit-geo-grid-cache.cc  eckit-geo-grid-list.cc  eckit-geo-grid-nearest.cc  eckit-geo-grid-spec.cc  eckit-geo-grid.cc  eckit-grid-list.cc  eckit-grid-nearest.cc  eckit-grid-spec.cc  eckit-grid-triangulation.cc  eckit-grid.cc  eckit-hash.cc  eckit-info.cc  eckit-monitor-dump.cc  eckit-version.cc  griditer-grib.cc  griditer-version.cc  grit-grib.cc  rsync.cc  syslog-client.cc  syslog-server.cc
tests/: CMakeLists.txt  param.cc  pl.cc  projection.cc  projection_ll_to_xyz.cc  projection_proj.cc  projection_rotation.cc  test_area.py  test_gridspec.py  test_iterator.cc  test_param.cc  test_projection_ll_to_xyz.cc  types.cc  util.cc
tests/codec/: CMakeLists.txt  TestEnvironment.h  test_codec_encoding.cc  test_codec_record.cc  test_codec_stream.cc  test_io_encoding.cc  test_io_record.cc  test_io_stream.cc
tests/config/: CMakeLists.txt  test_configuration.cc  test_mapped_configuration.cc  test_resource.cc
tests/container/: CMakeLists.txt  benchmark_densemap.cc  test_bloomfilter.cc  test_btree.cc  test_cache_lru.cc  test_cachemanager.cc  test_densemap.cc  test_denseset.cc  test_queue.cc  test_sharedmemarray.cc  test_trie.cc
tests/exception/: CMakeLists.txt  test_exceptions.cc
tests/experimental/: CMakeLists.txt
tests/filesystem/: CMakeLists.txt  test_aiohandle.cc  test_asynchandle.cc  test_atomic_file_update.cc  test_filemode.cc  test_filespace_strategies.cc  test_localpathname.cc  test_multihandle.cc  test_pathexpander.cc  test_pathname.cc  test_restarthandle.cc  test_uri.cc
tests/format/: CMakeLists.txt  test_format.cc  test_format_log.cc  test_format_to.cc
tests/geo/: CMakeLists.txt  CNTR_RG_60M_2024_4326_mini.geojson  ORCA2_T.ek  area_boundingbox.cc  area_geojson.cc  area_libraries.cc  area_library.cc  area_polygon.cc  area_shapefile.cc  cache.cc  convex_hull.cc  convex_hull_n.cc  coordinate_helpers.cc  download.cc  figure.cc  figure_earth.cc  figure_sphere.cc  figure_sphere_great_circle.cc  gaussian.cc  geometry_sphere.cc  great_circle.cc  grid.cc  grid_fesom.cc  grid_fesom.ek  grid_healpix.cc  grid_icon.cc  grid_icon.ek  grid_orca.cc  grid_orca.ek  grid_reduced_gg.cc  grid_reduced_ll.cc  grid_regular_gg.cc  grid_regular_ll.cc  grid_reorder.cc  grid_to_points.cc  grid_unstructured_ll.cc  gridspec.cc  increments.cc  integration.cc  iterator.cc  (+46 more)
tests/geometry/: CMakeLists.txt  test_coordinate_helpers.cc  test_great_circle.cc  test_grid.cc  test_iterator.cc  test_kdtree.cc  test_kpoint.cc  test_points.cc  test_polygon.cc  test_projection.cc  test_projection_ll_to_xyz.cc  test_projection_proj.cc  test_util.cc  (+4 more)
(+3912 files in other folders)
